test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/return_array.plx
# In our implementation this is a parse error; in others it could be a type error.
pub fn foo(none) [3];
